changed address on website

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <span class="text-primary">Adebola</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (906) 074-2630·
+                        4 African Church Street · Agidingbi Ikeja, Lagos · (906) 074-2630·
                         <a href="mailto:deboladebajo78@gmail.com">deboladebajo78@gmail.com</a>
                     </div>
                     <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
