--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         4 African Church Street · Agidingbi Ikeja, Lagos · (906) 074-2630·
-                        <a href="mailto:deboladebajo78@gmail.com">deboladebajo78@gmail.com</a>
+                        <a href="mailto:deboladebajo78@gmail.com">deboladebajo@yahoo.com</a>
                     </div>
                     <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
                     <p> 
