--- a/index.html
+++ b/index.html
@@ -199,5 +199,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <!-- Counter JS-->>
+        <script src="js/count.js"></script>
     </body>
 </html>
