--- a/index.html
+++ b/index.html
@@ -71,16 +71,8 @@
                             <h3 class="mb-0">Technical Support Specialist</h3>
                             <div class="subheading mb-3">Promethean Consulting Limited</div>
                             <ul>
-                                <li>Designed cloud infrastructure for the development project architectural runway using Amazon Web Services (AWS) and Terraform in both commercial (public) and GovCloud environments, enabling other project teams to work on their features without further delay to the project.</li>
-                                <li>Creation and configuration of cloud architecture, including Security Groups, VPCs, network ACLs, EC2 instances, AWS RDS databases, Load Balancers, and user accounts/roles/permissions.</li>
-                                <li>Worked with application vendors on architecture, deployment, and configuration of applications into the AWS cloud environment using infrastructure as code. Created custom scripts to handle the deployments using Terraform, PowerShell, and Bash to provide an immutable process that could be replicated and run automatically through a CI/CD pipeline.</li>
-                                <li>Created continuous integration/continuous delivery (CI/CD) pipeline using GitHub and AWS CodePipeline. </li>
-                                <li>Created and managed testing and training environments for Agile Release Train teams to support vendor training and classes.</li>
-                                <li>Created AWS Lambda functions using Python to automate EC2 instance shutdowns and restarts within the development environment during off-business hours to save on costs.</li>
-                                <li>Created hardened, STIG AMI images that comply with DOD standards and best practices, worked with IA/C&A teams on security scans and audits.</li>
-                                <li>Worked with other Agile Release Train teams on troubleshooting application, system, and database issues at the cloud level.</li>
-                                <li>Provided AWS training and guidance to other teams as necessary so that they could work within the AWS management console and CLI more efficiently.</li>
-                                <li>Documentation of cloud architecture and applications, including installation guides, configuration guides, user access and security, backups and restoration, and software dependencies.</li> 
+                                <li>Provisioned virtual machines for clients using Vmware esxi type 1 hypervisor</li>
+                                
                                 </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">January 2022 - Present</span></div>
