--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                         <span class="text-primary">Adebola</span>
                     </h1>
                     <div class="subheading mb-5">
-                        4 African Church Street · Agidingbi Ikeja, Lagos.
-                        <a href="tel:09060742630">(906) 074-2630.</a>
+                         Lagos, Ikeja.
+                        <a href="tel:09060742630">(906)074-2630.</a>
 
                         <a href="mailto:deboladebajo78@gmail.com">deboladebajo78@gmail.com.</a>
                     </div>
@@ -71,7 +71,7 @@
                             <h3 class="mb-0">Technical Support Specialist</h3>
                             <div class="subheading mb-3">Promethean Consulting Limited</div>
                             <ul>
-                                <li>Provisioned virtual machines for clients using Vmware esxi type 1 hypervisor</li>
+                                <li>Implemented VMWare ESXi Infrastructure for various clients for easy provisioning of vitrual machines </li>
                                 
                                 </ul>
                         </div>
