few changes to work experience

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Technical Support Specialist</h3>
+                            <h3 class="mb-0">Technical Support Engineer</h3>
                             <div class="subheading mb-3">Promethean Consulting Limited</div>
                             <ul>
                                 <li>Implemented VMWare ESXi Infrastructure for various clients for easy provisioning of vitrual machines </li>
