few edits to website

--- a/index.html
+++ b/index.html
@@ -155,11 +155,10 @@
              <section class="resume-section" id="projects">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Projects</h2>
+                    <h3 class="mb-0">Serverless Resume Website</h3>
                     <ul class="fa-ul mb-0">
-                        <li>
-                            
-                        </li>
-                        <li>               
+                        <li></li>
+                                      
                 </div>
             </section>
 
@@ -168,8 +167,7 @@
              <section class="resume-section" id="certifications">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Certifications</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <li>AWS Cloud Practitioner</li>
                 </div>
             </section>
             <hr class="m-0" />
@@ -191,7 +189,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
-        <!-- Counter JS-->>
+        <!-- Counter JS-->
         <script src="js/count.js"></script>
     </body>
 </html>
