--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Adebajo Adebola</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle " src="assets/img/debajo.jpg" alt="..." /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -50,7 +50,7 @@
 
                         <a href="mailto:deboladebajo78@gmail.com">deboladebajo78@gmail.com.</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">Amazon web services and Microsoft azure certified IT professional with experience in helping companies migrate from legacy systems to building reliable, scalable and highly available cloud  infrastructure using amazon web services and Microsoft azure cloud services looking to gain more expertise and experience in the cloud computing and Devops field .</p>
                     <p> 
                     Visits: <span id="visits"></span>
                      <p>
