--- a/index.html
+++ b/index.html
@@ -71,11 +71,16 @@
                             <h3 class="mb-0">Technical Support Engineer</h3>
                             <div class="subheading mb-3">Promethean Consulting Limited</div>
                             <ul>
-                                <li>Implemented VMWare ESXi Infrastructure for various clients for easy provisioning of vitrual machines </li>
+                                <li>Implemented disaster recovery and fault tolerant Systems for clients using Acronis Solution to achieve clients desired recovery time objective.</li>
+                                <li>Installed VMWare Esxi infrastructure for various clients for quick and easy provisioning of production virtual machine.</li>
+                                <li>Provisioned Amazon EC2 instances using windows AMI and configured network ACL for VPC and security group to perform backup test recovery.</li>
+                                <li>Applied my knowledge of TCP/IP, NAT, DNS, DHCP, VLAN, for setting up networking for devices and servers.</li>
+                                <li>Windows Administration, including Active Directory, DNS, replication, account creation
+                                    password changes, and Microsoft Exchange administration.</li>
                                 
                                 </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">January 2022 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2022 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -90,7 +95,7 @@
                                 <li>Analysed and troubleshooted problems using electrical schematic diagrams, which aided in better machine diagnostics.</li> 
                                 </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">June 2020 - December 2020</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2020 - 2021</span></div>
                     </div>
                 </div>
             </section>
@@ -118,22 +123,15 @@
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
                         <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
                         <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-npm"></i></li>
                     </ul>
                     <div class="subheading mb-3">Passionate About</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Amazon Web Services
+                            Amazon Web Services (AWS) Cloud
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -158,8 +156,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Serverless Resume Website</h3>
-                            <a href="www.adebolaadebajo.com">www.adebolaadebajo.com.</a>
-                            <a href="https://github.com/debajoo/cloudresumechallenge-backend">Github Repo.</a>
+                            <a href="https://github.com/debajoo/cloudresumechallenge-backend">Github Repository.</a>
                             <ul>
                                 <li>Deployed website as a static website using amazon S3(Simple Storage Service).</li>
                                 <li>Created an Amazon cloudfront distribution in order to cache website contents in edge locations to achieve low latency.</li>
@@ -178,7 +175,7 @@
              <section class="resume-section" id="certifications">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Certifications</h2>
-                    <li>AWS Cloud Practitioner.</li> 
+                    <a href="https://www.credly.com/badges/21f0caef-bf36-4c85-b1d0-0afe95507158/public_url"><img src="assets/img/cert.png"></a>
                     
 
                 </div>
